# CommonLibraries

./: .gitignore  LICENSE  Makefile  MakefileCommon  MakefileConsoleCommon  MakefileLibCommon  MakefileOpenCVCommon  README.md
CockpitCommon/: IProgressCallback.h
Common/: ALogger.h  AParallelFunction.cpp  AParallelFunction.h  BitFunctions.h  CMakeLists.txt  CRC32.cpp  CRC32.h  ConcurrentCommunicationEndpoint.cpp  ConcurrentCommunicationEndpoint.h  Duernion.h  EfficientLowPassFilter.h  ForEachMacro.h  Histogram.h  ICommunicationEndpoint.h  IniFile.cpp  IniFile.h  IniIterator.cpp  IniIterator.h  IniParser.cpp  IniParser.h  LRUCache.h  Makefile  Matrix.h  NamedPipes.cpp  NamedPipes.h  PathFunctions.h  PrintLog.cpp  PrintLog.h  RS232.cpp  RS232.h  RTPReceiver.cpp  RTPReceiver.h  RTPSender.cpp  RTPSender.h  RTSPClient.cpp  RTSPClient.h  RingBuffer.h  SSLSocket.cpp  SSLSocket.h  SampleBin.h  (+26 more)
IrrlichtExtensions/: AMLBox.cpp  AMLBox.h  AMLGUIElement.cpp  AMLGUIElement.h  AggregatableGUIElementAdapter.cpp  AggregatableGUIElementAdapter.h  AggregateGUIElement.cpp  AggregateGUIElement.h  AggregateSkinExtension.cpp  AggregateSkinExtension.h  AppTracker.cpp  AppTracker.h  BeautifulCheckBox.cpp  BeautifulCheckBox.h  BeautifulGUIButton.cpp  BeautifulGUIButton.h  BeautifulGUIImage.cpp  BeautifulGUIImage.h  BeautifulGUIText.cpp  BeautifulGUIText.h  CMBox.cpp  CMBox.h  CMakeLists.txt  CachedTexture.h  CallbackInsertGUIElement.cpp  CallbackInsertGUIElement.h  ChooseFromListDialog.cpp  ChooseFromListDialog.h  ColorSelector.cpp  ColorSelector.h  CommonIniEditor.cpp  CommonIniEditor.h  ConstantLanguagePhrases.cpp  ConstantLanguagePhrases.h  DragPlaceGUIElement.cpp  DragPlaceGUIElement.h  DraggableGUIElement.cpp  DraggableGUIElement.h  Drawer2D.cpp  Drawer2D.h  (+63 more)
RPC/: IRPC.h  (+2 more)
RPC/JSONRPC2/: CMakeLists.txt  JSONParser.cpp  JSONParser.h  JSONRPC2Client.cpp  JSONRPC2Client.h  JSONRPC2Server.cpp  JSONRPC2Server.h  Makefile  Readme.txt  RequestBasedJSONRPC2Client.cpp  RequestBasedJSONRPC2Client.h  RequestBasedJSONRPC2ServerHelpers.cpp  RequestBasedJSONRPC2ServerHelpers.h
Sound/: AlsaSoundDriver.cpp  AlsaSoundDriver.h  CMakeLists.txt  ISoundDriver.h  ISoundSource.h  Makefile  NoSoundDriver.cpp  NoSoundDriver.h  OpenSLESSoundDriver.cpp  OpenSLESSoundDriver.h  SineWaveSoundSource.cpp  SineWaveSoundSource.h  SoundManager.cpp  SoundManager.h  StaticWaveFileSource.cpp  StaticWaveFileSource.h
(+205 files in other folders)
